<resources>
    <string name="app_name">ReadingDiary</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="book_name_string">Book name</string>
    <string name="empty" />
    <string name="note">Note</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_item_dialog_title">Delete</string>
    <string name="delete_item_dialog_message">Do you really want to delete that book?</string>
    <string name="edit">Edit</string>
    <string name="main_list_title">List</string>
    <string name="detail_book_title">Detail</string>
    <string name="edit_book_title">Edit</string>
    <string name="new_book_title">New</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="first_quarter">Q1</string>
    <string name="second_quarter">Q2</string>
    <string name="third_quarter">Q3</string>
    <string name="fourth_quarter">Q4</string>
    <string name="period_of_year_non_selected">-</string>
    <string name="read_info_status_read">Read</string>
    <string name="read_info_status_unread">Unread</string>
</resources>